# Note_app

./: .gitignore  main.py  pyproject.toml
website/: __init__.py  auth.py  models.py  views.py
website/templates/: base.html  home.html  login.html  sign_up.html
